<resources>
    <string name="app_name">T1Mobile Demo</string>
    <string name="scan_enable">Enable</string>
    <string name="scan_disable">Disable</string>
    <string name="scan_start">Read</string>
    <string name="scan_stop">Cancel</string>
    <string name="bcd_name">바코드 스캔 테스트</string>
    <string name="main_title">Welcome to T1Mobile</string>
    <string name="main_btn_login">로그인</string>
    <string name="main_btn_new_user">사용자 등록</string>
    <string name="main_text_id">사용자 :</string>
    <string name="main_text_pwd">암호 :</string>
    <string name="empty_string"/>
    <string name="registeruser_title">사용자 등록</string>
    <string name="registeruser_btn_cancel">취소</string>
    <string name="registeruser_btn_register">등록</string>
    <string name="registeruser_text_email">E-Mail :</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
