<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/constraintLayout">
    <EditText
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:layout_width="200dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp" android:inputType="textEmailAddress"/>
    <TextView
            android:text="@string/registeruser_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="53dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword2"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="8dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
    <TextView
            android:text="@string/main_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>
    <TextView
            android:text="@string/main_text_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <Button
            android:text="@string/registeruser_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="104dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/txtPassword2"/>
    <EditText
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/empty_string"
            android:ems="10"
            android:id="@+id/txtUser"
            android:layout_width="200dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="7dp"/>
    <Button
            android:text="@string/registeruser_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel" tools:ignore="MissingConstraints" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/btnLogin"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/txtPassword2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registeruser_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.022"
            android:textSize="20sp" android:textStyle="bold" android:id="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.511"/>
</androidx.constraintlayout.widget.ConstraintLayout>