<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.022"
            android:textSize="20sp" android:textStyle="bold" android:id="@+id/textView"
            app:layout_constraintHorizontal_bias="0.511"/>
    <TextView
            android:text="@string/main_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="53dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"/>
    <TextView
            android:text="@string/main_text_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            tools:ignore="MissingConstraints" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="66dp"
    />

    <EditText
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/empty_string"
            android:ems="10"
            android:id="@+id/txtUser"
            android:layout_width="200dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="7dp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUser"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="7dp"/>

    <Button
            android:text="@string/main_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="97dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
    <Button
            android:text="@string/main_btn_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister" tools:ignore="MissingConstraints" android:layout_marginStart="23dp"
            app:layout_constraintStart_toEndOf="@+id/btnLogin" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>


    <Button
            android:text="@string/bcd_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnScanner"
            android:layout_marginTop="432dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.467"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_progress" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="395dp"
            android:layout_height="149dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtResult" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>