<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BCDScannerActivity">

    <TextView
            android:text="Barcode Scanner Sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" android:layout_marginBottom="648dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="632dp" tools:layout_editor_absoluteX="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp">
            <Button
                    android:text="@string/scan_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnScanEnable" android:layout_weight="1"/>
            <Button
                    android:text="@string/scan_disable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnScanDisable" android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:id="@+id/scanresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25sp"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/btnStartRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_start" android:layout_weight="1"/>

            <Button
                    android:id="@+id/btnStopRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_stop" android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>